Post-v3.0.0
--------------------
   - ovs-vswitchd now detects changes in CPU affinity and adjusts the number
     of handler and revalidator threads if necessary.
   - AF_XDP:
     * Added support for building with libxdp and libbpf >= 0.7.
   - ovs-appctl:
     * "ovs-appctl ofproto/trace" command can now display port names with the
       "--names" option.
   - OVSDB-IDL:
     * Add the support to specify the persistent uuid for row insert in both
       C and Python IDLs.
   - Windows:
     * Conntrack IPv6 fragment support.
   - DPDK:
     * Add support for DPDK 22.11.1.
   - For the QoS max-rate and STP/RSTP path-cost configuration OVS now assumes
     10 Gbps link speed by default in case the actual link speed cannot be
     determined.  Previously it was 10 Mbps.  Values can still be overridden
     by specifying 'max-rate' or '[r]stp-path-cost' accordingly.
   - ovs-ctl:
     * New option '--dump-hugepages' to include hugepages in core dumps. This
       can assist with postmortem analysis involving DPDK, but may also produce
       significantly larger core dump files.
   - Support for travis-ci.org based continuous integration builds has been
     dropped.
   - Userspace datapath:
     * Add '-secs' argument to appctl 'dpif-netdev/pmd-rxq-show' to show
       the pmd usage of an Rx queue over a configurable time period.


v3.0.0 - 15 Aug 2022
--------------------
   - libopenvswitch API change:
     * To fix the Undefined Behavior issue causing the compiler to incorrectly
       optimize important parts of code, container iteration macros (e.g.,
       LIST_FOR_EACH) have been re-implemented in a UB-safe way.
     * Backwards compatibility has mostly been preserved, however the
       user-provided pointer is now set to NULL after the loop (unless it
       exited via "break;")
     * Users of libopenvswitch will need to double-check the use of such loop
       macros before compiling with a new version.